--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -39,6 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "include": ["src/components", "custom.d.ts"]
+    "include": [
+      "src/components",
+      "custom.d.ts"
+    ]
   }
 }
